# SuYan

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-release.yml
.kiro/specs/cross-platform-ime/: design.md  requirements.md  tasks.md
build-debug/tests/windows_bridge_encoding_test_autogen/: deps  moc_predefs.h
build-debug/tests/windows_bridge_process_test_autogen/: deps
cloud/: .gitkeep
data/rime/: README.md  default.custom.yaml  default.yaml  ime_pinyin.dict.yaml  ime_pinyin.schema.yaml  melt_eng.dict.yaml  melt_eng.schema.yaml  rime_ice.schema.yaml
installer/: README.md  suyan.nsi
installer/macos/package/: IMEPinyin-component.plist  common.sh  make_package.sh  sign_and_notarize.sh
installer/macos/resources/: IMEPinyin.entitlements
installer/macos/scripts/: postinstall  preinstall
installer/windows/: LICENSE.txt  README.txt  build-installer.bat  install.nsi  silent-install.bat  silent-uninstall.bat
installer/windows/resources/: .gitkeep
output/: .gitkeep
resources/themes/: dark.yaml  light.yaml
scripts/: .gitkeep  build-macos-installer.sh  build-macos.sh  build-windows-all.bat  build-windows-installer.bat  build-windows.bat  build_installer.bat  build_pkg.bat  build_pkg.sh  build_uninstaller.sh  check-environment.sh  create-release-tag.sh  debug_reinstall.bat  generate-status-icons.sh  init-submodules.sh  uninstall.sh
scripts/pkg/: postinstall  preinstall
scripts/pkg/resources/: conclusion.html  welcome.html
src/: CMakeLists.txt
src/common/: .gitkeep  CMakeLists.txt  common.cpp
src/core/: CMakeLists.txt  config_manager.cpp  config_manager.h  frequency_manager.cpp  frequency_manager.h  input_engine.cpp  input_engine.h  ipc_server.cpp  ipc_server.h  logger.h  platform_bridge.h  rime_wrapper.cpp  rime_wrapper.h
src/core/dictionary/: CMakeLists.txt  dictionary_manager.h  dictionary_manager_impl.cpp  dictionary_manager_impl.h
src/core/frequency/: .gitkeep  CMakeLists.txt  frequency_manager.h  frequency_manager_impl.cpp  frequency_manager_impl.h
src/core/input/: CMakeLists.txt  candidate_merger.cpp  candidate_merger.h  input_session.cpp  input_session.h  input_state.cpp  input_state.h  rime_config.cpp  rime_config.h
src/core/learning/: CMakeLists.txt  auto_learner.h  auto_learner_impl.cpp  auto_learner_impl.h
src/core/storage/: .gitkeep  CMakeLists.txt  local_storage.h  sqlite_storage.cpp  sqlite_storage.h
src/core/sync/: .gitkeep  CMakeLists.txt  sync.cpp
src/platform/macos/: .gitkeep  CMakeLists.txt  IMKBridge.h  IMKBridge.mm  INTEGRATION_GUIDE.md  ImeIntegration.swift  Info.plist  SquirrelMenuExtension.swift  macos_bridge.h  macos_bridge.mm  main.mm  squirrel_integration.cpp  squirrel_integration.h  status_bar_manager.h  status_bar_manager.mm
src/platform/macos/rime_config/: default.custom.yaml  ime_pinyin.dict.yaml  ime_pinyin.schema.yaml  squirrel.custom.yaml
src/platform/windows/: CMakeLists.txt  INTEGRATION_GUIDE.md  SuYan.manifest  key_converter.cpp  key_converter.h  main.cpp  registry_config.h  resource.h  resource.rc  suyan.def  tray_manager.cpp  tray_manager.h  tsf_bridge.cpp  tsf_bridge.h  tsf_types.h  weasel_handler_ext.cpp  weasel_handler_ext.h  weasel_integration.cpp  weasel_integration.h  weasel_tray_ext.cpp  weasel_tray_ext.h  windows_bridge.cpp  windows_bridge.h
src/platform/windows/rime_config/: default.custom.yaml  ime_pinyin.schema.yaml  weasel.custom.yaml
src/platform/windows/tsf_dll/: CMakeLists.txt  dll_main.cpp  edit_session.cpp  edit_session.h  exports.def  ipc_client.cpp  ipc_client.h  langbar_button.cpp  langbar_button.h  logger.cpp  logger.h  tsf_text_service.cpp  tsf_text_service.h
src/server/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  server_app.cpp  server_app.h
src/shared/: ipc_protocol.h  logger.h
src/ui/: CMakeLists.txt  candidate_view.cpp  candidate_view.h  candidate_window.cpp  candidate_window.h  candidate_window_mac.mm  candidate_window_win.cpp  layout_manager.cpp  layout_manager.h  suyan_ui_init.cpp  suyan_ui_init.h  theme_manager.cpp  theme_manager.h
tests/: CMakeLists.txt  librime_test.cpp  qt_env_test.cpp
tests/core/: config_manager_test.cpp  frequency_manager_test.cpp  input_engine_test.cpp  rime_wrapper_test.cpp
tests/data/: .gitkeep  README.md  test_dictionary.dict.yaml
tests/platform/: candidate_position_test.cpp
tests/platform/windows/: cursor_coordinate_property_test.cpp  e2e_integration_test.cpp  e2e_manual_test_guide.md  ipc_integration_test.cpp  key_converter_test.cpp  multi_app_test_helper.cpp  tsf_bridge_key_event_test  tsf_bridge_key_event_test.cpp  tsf_key_handling_property_test.cpp  unicode_commit_property_test.cpp  windows_bridge_encoding_test.cpp  windows_bridge_process_test.cpp
tests/property/: .gitkeep  CMakeLists.txt  dictionary_property_test.cpp  main.cpp  sample_property_test.cpp
tests/shared/: cursor_position_encoding_test.cpp  ipc_protocol_test.cpp
tests/ui/: candidate_window_boundary_property_test.cpp  qt_imk_integration_test.mm  ui_test_app.cpp
tests/unit/: CMakeLists.txt  auto_learner_test.cpp  candidate_merger_test.cpp  dictionary_manager_test.cpp  frequency_test.cpp  input_session_test.cpp  input_state_test.cpp  main.cpp  sample_test.cpp  storage_test.cpp  weasel_integration_test.cpp
